# RustCommandLineCalculator

./: .gitignore  .swp  CITATION.cff  Cargo.toml  README.md  test.txt
src/: expression_parser.rs  lib.rs  main.rs
src/expression_parser/: shunting_yard.rs
tests/: test.rs
